--- a/google_drive_ocr.html
+++ b/google_drive_ocr.html
@@ -94,7 +94,7 @@
     }
     
     function Download(){
-        if (fileId == ""){
+        if (!fileId){
             alert("Please upload a file first.");
             return;
         }
